fix some bugs, now attackInteraction works